# usb_sound_card_with_pico

./: .gitignore  CMakeLists.txt  README.md  README_jp.md
control_uwp/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  control_uwp.csproj  control_uwp.sln
control_uwp/Properties/: AssemblyInfo.cs
patch/: tinyusb-rp2040-allow-memory-preallocation.patch
pio/: audio_i2s_32_in.pio  audio_i2s_32_out.pio  pulse_out.pio  spdif_in.pio  spdif_out.pio
schematic/: SPDIF.kicad_sch  adc.kicad_sch  amplifer_power_generator.kicad_sch  dac.kicad_sch  headphone_out.kicad_sch  input_mixer.kicad_sch  line_in.kicad_sch  line_out.kicad_sch  usbdac-rescue.kicad_sym  usbdac.kicad_pcb  usbdac.kicad_prl  usbdac.kicad_pro  usbdac.kicad_sch
schematic/usbdac.pretty/: 6.35mm Jack.kicad_mod  A915AY-100M.kicad_mod  CUS01.kicad_mod  Dual RCA Jack.kicad_mod  JST1B15.kicad_mod  JST_ZH_S2B_ZR_1x02_P1.50mm_Horizontal.kicad_mod  JST_ZH_S2B_ZR_1x02_P1.50mm_Horizontal_2layer.kicad_mod  JST_ZH_S2B_ZR_1x03_P1.50mm_Horizontal.kicad_mod  JST_ZH_S2B_ZR_1x03_P1.50mm_Horizontal_2layer.kicad_mod  JST_ZH_S2B_ZR_1x05_P1.50mm_Horizontal.kicad_mod  JST_ZH_S2B_ZR_1x05_P1.50mm_Horizontal_2layer.kicad_mod  Jack_3.5mm_PJ31060-I_Horizontal.kicad_mod  PLR133-135.kicad_mod
src/: circular_buffer.h  control_request.h  converter.cpp  converter.h  debug.cpp  debug.h  device_config.h  device_main.cpp  job_queue.cpp  job_queue.h  mixer.cpp  mixer.h  node.h  profile_measurement_list.h  profiler.cpp  profiler.h  spdifdefs.cpp  spdifdefs.h  streaming.cpp  streaming.h  streaming_adc_in.h  streaming_adc_in_impl.h  streaming_dac_out.h  streaming_dac_out_impl.h  streaming_internal.h  streaming_spdif_in.h  streaming_spdif_in_impl.h  streaming_spdif_out.h  streaming_spdif_out_impl.h  support.cpp  support.h  test.cpp  tusb_config.h  usb_config.h  usb_descriptors.cpp  usb_descriptors.h
